Arreglos en el codigo 2

--- a/src/views/404.ejs
+++ b/src/views/404.ejs
@@ -26,7 +26,7 @@
         <h3 class="font-bold">Página no encontrada</h3>
 
         <div class="error-desc">
-            Lo sentimos, pero la página que busca no se ha encontrado.
+            Lo sentimos, pero la página que busca no se ha encontrado
         </div>
     </div>
 
