--- a/src/views/editAMP.ejs
+++ b/src/views/editAMP.ejs
@@ -119,7 +119,7 @@
                                             <div class="col-sm-9">
                                                 <select class="form-control" name="tipo_moneda_amp" required>
                                                     <option value="<%= amp.tipo_moneda_amp %>"><%= amp.tipo_moneda_amp %></option>
-                                                    <option value="BOLIVAR">BOLIVAR</option>
+                                                    <option value="BOLÍVAR">BOLÍVAR</option>
                                                     <option value="DÓLAR">DÓLAR</option>
                                                     <option value="EUROS">EUROS</option>
                                                 </select>
