--- a/src/views/editCollective.ejs
+++ b/src/views/editCollective.ejs
@@ -45,7 +45,7 @@
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_moneda_colectivo" required>
                                                 <option value="<%= collective.tipo_moneda_colectivo %>"><%= collective.tipo_moneda_colectivo %></option>
-                                                <option value="BOLIVAR">BOLIVAR</option>
+                                                <option value="BOLÍVAR">BOLÍVAR</option>
                                                 <option value="DÓLAR">DÓLAR</option>
                                                 <option value="EUROS">EUROS</option>
                                             </select>
