--- a/src/views/editLetterGuarentee.ejs
+++ b/src/views/editLetterGuarentee.ejs
@@ -119,7 +119,7 @@
                                             <div class="col-sm-9">
                                                 <select class="form-control" name="tipo_moneda_carta_aval" required>
                                                     <option value="<%= letterGuarentee.tipo_moneda_carta_aval %>"><%= letterGuarentee.tipo_moneda_carta_aval %></option>
-                                                    <option value="BOLIVAR">BOLIVAR</option>
+                                                    <option value="BOLÍVAR">BOLÍVAR</option>
                                                     <option value="DÓLAR">DÓLAR</option>
                                                     <option value="EUROS">EUROS</option>
                                                 </select>
