--- a/src/views/editVehicle.ejs
+++ b/src/views/editVehicle.ejs
@@ -173,7 +173,7 @@
                                                 <option value="MOTOCICLETA">MOTOCICLETA</option>
                                                 <option value="AUTOMÓVIL">AUTOMÓVIL</option>
                                                 <option value="CAMIÓN">CAMIÓN</option>
-                                                <option value="AUTOBUS">AUTOBUS</option>
+                                                <option value="AUTOBÚS">AUTOBÚS</option>
                                             </select>
                                         </div>
                                     </div>
