--- a/src/views/forgotPassword.ejs
+++ b/src/views/forgotPassword.ejs
@@ -31,7 +31,7 @@
                     <h2 class="font-bold">Olvidó su contraseña</h2>
 
                     <p>
-                        Introduzca su dirección de correo electrónico y su contraseña se restablecerá y se le enviará por correo electrónico.
+                        Introduzca su dirección de correo electrónico y su contraseña se restablecerá y se le enviará por correo electrónico
                     </p>
 
                     <div class="row">
@@ -41,8 +41,9 @@
                                 <div class="form-group">
                                     <input 
                                         type="email" 
-                                        class="form-control" 
-                                        placeholder="Email address" 
+                                        class="form-control"
+                                        pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+                                        placeholder="Correo Electrónico" 
                                         required
                                     >
                                 </div>
