--- a/src/views/healthCollectiveForm.ejs
+++ b/src/views/healthCollectiveForm.ejs
@@ -94,7 +94,7 @@
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="tipo_moneda_colectivo" required>
                                                         <option value="">Seleccione *</option>
-                                                        <option value="BOLIVAR">BOLIVAR</option>
+                                                        <option value="BOLÍVAR">BOLÍVAR</option>
                                                         <option value="DÓLAR">DÓLAR</option>
                                                         <option value="EUROS">EUROS</option>
                                                     </select>
@@ -274,7 +274,7 @@
                                         <div class="form-group">
                                             <div class="custom-file">
                                                 <input id="excel" name="excel" type="file" class="custom-file-input">
-                                                <label for="xlsx" class="custom-file-label">Eliga un archivo...</label>
+                                                <label for="xlsx" class="custom-file-label">Elija un archivo...</label>
                                             </div> 
                                         </div>
                                     </div>
@@ -406,7 +406,7 @@
                                                         <option value="TRANSFERENCIA">TRANSFERENCIA</option>
                                                         <option value="ZELLE">ZELLE</option>
                                                         <option value="EFECTIVO">EFECTIVO</option>
-                                                        <option value="TARJETA DE DEBITO">TARJETA DE DEBITO</option>
+                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
                                                         <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
                                                         <option value="PAYPAL">PAYPAL</option>
                                                         <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
