--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -72,14 +72,14 @@
                                 <a href="#">Agregar Asegurado<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li><a href="/sistema/add-natural-insured">Persona Natural</a></li>
-                                    <li><a href="/sistema/add-legal-insured">Persona Juridica</a></li>
+                                    <li><a href="/sistema/add-legal-insured">Persona Jurídica</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <a href="#">Consultar Asegurados<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li><a href="/sistema/natural-insureds">Persona Natural</a></li>
-                                    <li><a href="/sistema/legal-insureds">Persona Juridica</a></li>
+                                    <li><a href="/sistema/legal-insureds">Persona Jurídica</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -121,11 +121,11 @@
                     <li>
                         <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reclamos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/add-refund">Agregar Reembolsos</a></li>
+                            <li><a href="/sistema/add-refund">Agregar Reembolso</a></li>
                             <li><a href="/sistema/refunds">Consultar Reembolsos</a></li>
-                            <li><a href="/sistema/add-letter-guarantee">Agregar Cartas Avales</a></li>
+                            <li><a href="/sistema/add-letter-guarantee">Agregar Carta Aval</a></li>
                             <li><a href="/sistema/letters-guarentee">Consultar Cartas Avales</a></li>
-                            <li><a href="/sistema/add-emergency">Agregar Emergencias</a></li>
+                            <li><a href="/sistema/add-emergency">Agregar Emergencia</a></li>
                             <li><a href="/sistema/emergencies">Consultar Emergencias</a></li>
                             <li><a href="/sistema/add-amp">Agregar AMP</a></li>
                             <li><a href="/sistema/amp">Consultar AMP</a></li>
@@ -136,7 +136,7 @@
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/premiums-collected">Primas Cobradas</a></li>
                             <li><a href="/sistema/commissions-collected">Comisiones Cobradas</a></li>
-                            <li><a href="/sistema/policy-claims">Siniestralidad Poliza</a></li>
+                            <li><a href="/sistema/policy-claims">Siniestralidad Póliza</a></li>
                             <li><a href="/sistema/global-loss-ratio">Siniestralidad Global</a></li>
                         </ul>
                     </li>
