--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -61,7 +61,7 @@
                                                 type="tel"
                                                 name="telefono_asegurado_per_jur"
                                                 id="telefono_asegurado_per_jur" 
-                                                placeholder="Telefono Fijo *" 
+                                                placeholder="Teléfono Fijo *" 
                                                 class="form-control"
                                                 required
                                             >
@@ -74,7 +74,7 @@
                                                 type="tel"
                                                 name="telefono_opcional_per_jur"
                                                 id="telefono_opcional_per_jur" 
-                                                placeholder="Telefono Opcional" 
+                                                placeholder="Teléfono Opcional" 
                                                 class="form-control"
                                             >
                                         </div>
