--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -68,13 +68,13 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="tel"
                                                 name="telefono_asegurado_per_nat"
                                                 id="telefono_asegurado_per_nat" 
-                                                placeholder="Telefono Fijo" 
+                                                placeholder="Teléfono Fijo" 
                                                 class="form-control"
                                             >
                                         </div>
@@ -127,13 +127,13 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="tel"
                                                 name="telefono_emergencia_per_nat"
                                                 id="telefono_emergencia_per_nat" 
-                                                placeholder="Telefono de Contacto de Emergencia *" 
+                                                placeholder="Teléfono de Contacto de Emergencia *" 
                                                 class="form-control"
                                                 required
                                             >
