--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -37,7 +37,7 @@
                             <th>Correo Electrónico</th>
                             <th>Dirección Fiscal</th>
                             <th>Cargo</th>
-                            <th>Linea de Negocio</th>
+                            <th>Línea de Negocio</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -53,7 +53,7 @@
                             <th>Correo Electrónico</th>
                             <th>Dirección Fiscal</th>
                             <th>Cargo</th>
-                            <th>Linea de Negocio</th>
+                            <th>Línea de Negocio</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -195,7 +195,7 @@ $(document).ready(function(){
             "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
             "infoFiltered": "(Filtrado de _MAX_ total entradas)",
             "infoPostFix": "",
-            "thousands": ",",
+            "thousands": ".",
             "lengthMenu": "Mostrar _MENU_ Entradas",
             "loadingRecords": "Cargando...",
             "processing": "Procesando...",
@@ -203,7 +203,7 @@ $(document).ready(function(){
             "zeroRecords": "Sin resultados encontrados",
             "paginate": {
                 "first": "Primero",
-                "last": "Ultimo",
+                "last": "Último",
                 "next": "Siguiente",
                 "previous": "Anterior"
             }
