--- a/src/views/commissionsCollected.ejs
+++ b/src/views/commissionsCollected.ejs
@@ -160,7 +160,7 @@ $(document).ready(function(){
             "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
             "infoFiltered": "(Filtrado de _MAX_ total entradas)",
             "infoPostFix": "",
-            "thousands": ",",
+            "thousands": ".",
             "lengthMenu": "Mostrar _MENU_ Entradas",
             "loadingRecords": "Cargando...",
             "processing": "Procesando...",
@@ -168,7 +168,7 @@ $(document).ready(function(){
             "zeroRecords": "Sin resultados encontrados",
             "paginate": {
                 "first": "Primero",
-                "last": "Ultimo",
+                "last": "Último",
                 "next": "Siguiente",
                 "previous": "Anterior"
             }
