--- a/src/views/editEmergency.ejs
+++ b/src/views/editEmergency.ejs
@@ -119,7 +119,7 @@
                                             <div class="col-sm-9">
                                                 <select class="form-control" name="tipo_moneda_emergencia" required>
                                                     <option value="<%= emergency.tipo_moneda_emergencia %>"><%= emergency.tipo_moneda_emergencia %></option>
-                                                    <option value="BOLIVAR">BOLIVAR</option>
+                                                    <option value="BOLÍVAR">BOLÍVAR</option>
                                                     <option value="DÓLAR">DÓLAR</option>
                                                     <option value="EUROS">EUROS</option>
                                                 </select>
