--- a/src/views/editNaturalInsured.ejs
+++ b/src/views/editNaturalInsured.ejs
@@ -84,7 +84,7 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="tel"
@@ -143,7 +143,7 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Telefono</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Teléfono</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="tel"
