--- a/src/views/editPolicy.ejs
+++ b/src/views/editPolicy.ejs
@@ -45,7 +45,7 @@
                                         <div class="col-sm-9">
                                             <select class="form-control" name="tipo_moneda_poliza" required>
                                                 <option value="<%= policy.tipo_moneda_poliza %>"><%= policy.tipo_moneda_poliza %></option>
-                                                <option value="BOLIVAR">BOLIVAR</option>
+                                                <option value="BOLÍVAR">BOLÍVAR</option>
                                                 <option value="DÓLAR">DÓLAR</option>
                                                 <option value="EUROS">EUROS</option>
                                             </select>
