--- a/src/views/editRefund.ejs
+++ b/src/views/editRefund.ejs
@@ -119,7 +119,7 @@
                                             <div class="col-sm-9">
                                                 <select class="form-control" name="tipo_moneda_reembolso" required>
                                                     <option value="<%= refund.tipo_moneda_reembolso %>"><%= refund.tipo_moneda_reembolso %></option>
-                                                    <option value="BOLIVAR">BOLIVAR</option>
+                                                    <option value="BOLÍVAR">BOLÍVAR</option>
                                                     <option value="DÓLAR">DÓLAR</option>
                                                     <option value="EUROS">EUROS</option>
                                                 </select>
