--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row">
-                                        <label class="col-sm-3 col-form-label">Linea de Negocio</label>
+                                        <label class="col-sm-3 col-form-label">Línea de Negocio</label>
                                         <div class="col-sm-9">
                                             <div><label><input 
                                                             type="checkbox" 
