--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -123,7 +123,7 @@
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="tipo_moneda_poliza" required>
                                                         <option value="">Seleccione *</option>
-                                                        <option value="BOLIVAR">BOLIVAR</option>
+                                                        <option value="BOLÍVAR">BOLÍVAR</option>
                                                         <option value="DÓLAR">DÓLAR</option>
                                                         <option value="EUROS">EUROS</option>
                                                     </select>
@@ -155,7 +155,7 @@
                                                         <option value="INCENDIO">INCENDIO</option>
                                                         <option value="RIESGOS DIVERSOS">RIESGOS DIVERSOS</option>
                                                         <option value="COMBINADO EMPRESARIAL">COMBINADO EMPRESARIAL</option>
-                                                        <option value="COMBIANDO RESIDENCIAL">COMBIANDO RESIDENCIAL</option>
+                                                        <option value="COMBINADO RESIDENCIAL">COMBINADO RESIDENCIAL</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -383,7 +383,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <label class="col-sm-12 col-form-label">Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el ultimo beneficiario haga click en el botón siguiente</label>
+                                <label class="col-sm-12 col-form-label">Nota: Para guardar varios beneficiarios escriba uno por uno el beneficiario en el formulario y haga click en el botón de Guardar, En el caso de que guarde el último beneficiario haga click en el botón siguiente</label>
                                 <div class="form-group row">
                                     <div class="col-sm-12 col-sm-offset-2">
                                         <div class="card-body d-flex">
@@ -517,7 +517,7 @@
                                                         <option value="TRANSFERENCIA">TRANSFERENCIA</option>
                                                         <option value="ZELLE">ZELLE</option>
                                                         <option value="EFECTIVO">EFECTIVO</option>
-                                                        <option value="TARJETA DE DEBITO">TARJETA DE DEBITO</option>
+                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
                                                         <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
                                                         <option value="PAYPAL">PAYPAL</option>
                                                         <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
