--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -33,7 +33,7 @@
                         <tr>
                             <th>Rif</th>
                             <th>Razón Social</th>
-                            <th>Telefono</th>
+                            <th>Teléfono</th>
                             <th>Celular</th>
                             <th>Correo</th>
                             <th>Dirección</th>
@@ -48,7 +48,7 @@
                         <tr>
                             <th>Rif</th>
                             <th>Razón Social</th>
-                            <th>Telefono</th>
+                            <th>Teléfono</th>
                             <th>Celular</th>
                             <th>Correo</th>
                             <th>Dirección</th>
@@ -192,7 +192,7 @@ $(document).ready(function(){
             "infoEmpty": "Mostrando 0 to 0 of 0 Entradas",
             "infoFiltered": "(Filtrado de _MAX_ total entradas)",
             "infoPostFix": "",
-            "thousands": ",",
+            "thousands": ".",
             "lengthMenu": "Mostrar _MENU_ Entradas",
             "loadingRecords": "Cargando...",
             "processing": "Procesando...",
@@ -200,7 +200,7 @@ $(document).ready(function(){
             "zeroRecords": "Sin resultados encontrados",
             "paginate": {
                 "first": "Primero",
-                "last": "Ultimo",
+                "last": "Último",
                 "next": "Siguiente",
                 "previous": "Anterior"
             }
