--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -36,7 +36,7 @@
                                 name="email_username"
                                 id="email_username" 
                                 class="form-control" 
-                                placeholder="Email Adress/Username" 
+                                placeholder="Correo Electrónico/Username" 
                                 required
                             >
                         </div>
