--- a/src/views/refundForm.ejs
+++ b/src/views/refundForm.ejs
@@ -85,7 +85,7 @@
                                             <div class="col-sm-9">
                                                 <select class="form-control" name="tipo_moneda_reembolso" required>
                                                     <option value="">Seleccione *</option>
-                                                    <option value="BOLIVAR">BOLIVAR</option>
+                                                    <option value="BOLÍVAR">BOLÍVAR</option>
                                                     <option value="DÓLAR">DÓLAR</option>
                                                     <option value="EUROS">EUROS</option>
                                                 </select>
