--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -123,7 +123,7 @@
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="tipo_moneda_poliza" required>
                                                         <option value="">Seleccione *</option>
-                                                        <option value="BOLIVAR">BOLIVAR</option>
+                                                        <option value="BOLÍVAR">BOLÍVAR</option>
                                                         <option value="DÓLAR">DÓLAR</option>
                                                         <option value="EUROS">EUROS</option>
                                                     </select>
@@ -155,7 +155,7 @@
                                                         <option value="INCENDIO">INCENDIO</option>
                                                         <option value="RIESGOS DIVERSOS">RIESGOS DIVERSOS</option>
                                                         <option value="COMBINADO EMPRESARIAL">COMBINADO EMPRESARIAL</option>
-                                                        <option value="COMBIANDO RESIDENCIAL">COMBIANDO RESIDENCIAL</option>
+                                                        <option value="COMBINADO RESIDENCIAL">COMBINADO RESIDENCIAL</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -423,7 +423,7 @@
                                                         <option value="TRANSFERENCIA">TRANSFERENCIA</option>
                                                         <option value="ZELLE">ZELLE</option>
                                                         <option value="EFECTIVO">EFECTIVO</option>
-                                                        <option value="TARJETA DE DEBITO">TARJETA DE DEBITO</option>
+                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
                                                         <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
                                                         <option value="PAYPAL">PAYPAL</option>
                                                         <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
