--- a/src/views/userForm.ejs
+++ b/src/views/userForm.ejs
@@ -194,7 +194,7 @@
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row">
-                                        <label class="col-sm-3 col-form-label">Linea de Negocio</label>
+                                        <label class="col-sm-3 col-form-label">Línea de Negocio</label>
                                         <div class="col-sm-9">
                                             <div><label> <input type="checkbox" name="negocio" value="AUTOMÓVIL"> AUTOMÓVIL</label></div>
                                             <div><label> <input type="checkbox" name="negocio" value="PATRIMONIAL"> PATRIMONIAL</label></div>
