--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -123,7 +123,7 @@
                                                 <div class="col-sm-9">
                                                     <select class="form-control" name="tipo_moneda_poliza" required>
                                                         <option value="">Seleccione *</option>
-                                                        <option value="BOLIVAR">BOLIVAR</option>
+                                                        <option value="BOLÍVAR">BOLÍVAR</option>
                                                         <option value="DÓLAR">DÓLAR</option>
                                                         <option value="EUROS">EUROS</option>
                                                     </select>
@@ -454,7 +454,7 @@
                                                         <option value="MOTOCICLETA">MOTOCICLETA</option>
                                                         <option value="AUTOMÓVIL">AUTOMÓVIL</option>
                                                         <option value="CAMIÓN">CAMIÓN</option>
-                                                        <option value="AUTOBUS">AUTOBUS</option>
+                                                        <option value="AUTOBÚS">AUTOBÚS</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -495,7 +495,7 @@
                                                         type="text"
                                                         name="nombre_conductor_vehiculo"
                                                         id="nombre_conductor_vehiculo"
-                                                        placeholder="Nombre de Conductor"
+                                                        placeholder="Nombre del Conductor"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                         class="form-control"
                                                     >
@@ -638,7 +638,7 @@
                                                         <option value="TRANSFERENCIA">TRANSFERENCIA</option>
                                                         <option value="ZELLE">ZELLE</option>
                                                         <option value="EFECTIVO">EFECTIVO</option>
-                                                        <option value="TARJETA DE DEBITO">TARJETA DE DEBITO</option>
+                                                        <option value="TARJETA DE DÉBITO">TARJETA DE DÉBITO</option>
                                                         <option value="TARJETA DE CRÉDITO">TARJETA DE CRÉDITO</option>
                                                         <option value="PAYPAL">PAYPAL</option>
                                                         <option value="DEPOSITO BANCARIO">DEPOSITO BANCARIO</option>
