Arreglos en el codigo en el modulo de asegurados natural

--- a/src/views/editVehicle.ejs
+++ b/src/views/editVehicle.ejs
@@ -73,9 +73,9 @@
                                         <div class="col-sm-9">
                                             <input 
                                                 type="text"
-                                                name="serial_corroceria"
-                                                id="serial_corroceria"
-                                                value="<%= vehicle.serial_corroceria %>" 
+                                                name="serial_carroceria"
+                                                id="serial_carroceria"
+                                                value="<%= vehicle.serial_carroceria %>" 
                                                 class="form-control"
                                                 oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                 required
