--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -366,8 +366,8 @@
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="text"
-                                                        name="serial_corroceria"
-                                                        id="serial_corroceria"
+                                                        name="serial_carroceria"
+                                                        id="serial_carroceria"
                                                         placeholder="Carrocería Serial *" 
                                                         class="form-control"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
