--- a/src/views/vehicles.ejs
+++ b/src/views/vehicles.ejs
@@ -147,7 +147,7 @@ $(document).ready(function(){
             {"data": "tipo_vehiculo"},
             {"data": "color_vehiculo"},
             {"data": "serial_motor"},
-            {"data": "serial_corroceria"},
+            {"data": "serial_carroceria"},
             {
                 "data": "",
                 "render": (data, type, row) => {
