--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -27,14 +27,14 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula</label>
                                         <div class="col-sm-10">
                                             <input 
                                                 type="text"
-                                                name="id_rif_asegurado_per_nat"
-                                                id="id_rif_asegurado_per_nat"
-                                                placeholder="Cédula/Rif *" 
-                                                class="form-control"
+                                                name="cedula_asegurado_per_nat"
+                                                id="cedula_asegurado_per_nat"
+                                                placeholder="Cédula *" 
+                                                class="form-control number_format"
                                                 required
                                             >
                                         </div>
